Working create vehicle API
