# Garage Management System/src/app/visits/docs/swagger.json
@@ -41,6 +41,18 @@
                             "$ref": "#/definitions/models.ErrorAPIResponse"
                         }
                     },
+                    "404": {
+                        "description": "user not found",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorAPIResponse"
+                        }
+                    },
+                    "409": {
+                        "description": "Duplicate value in request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorAPIResponse"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -56,13 +68,16 @@
             "type": "object",
             "properties": {
                 "customer_id": {
-                    "type": "string"
+                    "type": "integer",
+                    "example": 12
                 },
                 "model": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Dezire"
                 },
                 "number_plate": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "MH19BW3626"
                 }
             }
         },
@@ -70,7 +85,8 @@
             "type": "object",
             "properties": {
                 "status": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Successfully created"
                 }
             }
         },
