# Garage Management System/src/app/visits/handlers/createVehicleHandler.go
@@ -5,8 +5,10 @@ import (
 	"garage_management_system/src/app/visits/business"
 	"garage_management_system/src/app/visits/constants"
 	visitModels "garage_management_system/src/app/visits/models"
+	"garage_management_system/src/models"
 	commonModels "garage_management_system/src/models"
 	"net/http"
+	"strings"
 
 	"github.com/gin-gonic/gin"
 )
@@ -30,6 +32,8 @@ func NewCreateVehicleHandler(service *business.CreateVehicleService) *CreaterVeh
 // @Param request body models.BFFCreateVehicleRequest true "Vehicle Registration Request"
 // @Success 201 {object} models.BFFCreateVehicleResponse "User created successfully"
 // @Failure 400 {object} models.ErrorAPIResponse "Invalid input payload"
+// @Failure 404 {object} models.ErrorAPIResponse "User not found"
+// @Failure 409 {object} models.ErrorAPIResponse "Duplicate value in request"
 // @Failure 500 {object} models.ErrorAPIResponse "Internal Server Error"
 // @Router /api/vehicles/create-vehicle [post]
 func (controller *CreaterVehicleHandler) CreaterVehicle(ctx *gin.Context) {
@@ -53,6 +57,24 @@ func (controller *CreaterVehicleHandler) CreaterVehicle(ctx *gin.Context) {
 
 	err := controller.service.CreateVehicle(ctx, ctx.Request.Context(), bffCreateVehicleRequest)
 	if err != nil {
+		if strings.Contains(err.Error(), constants.VehicleNumberPlateAlreadyExistsError) {
+			errorMsg := models.ErrorMessage{Key: "number plate", ErrorMessage: constants.VehicleNumberPlateAlreadyExistsError}
+			errorResponse := commonModels.ErrorAPIResponse{
+				Message: errorMsg,
+				Error:   constants.VehicleCreationFailedError,
+			}
+			ctx.IndentedJSON(http.StatusConflict, errorResponse)
+			return
+		} else if strings.Contains(err.Error(), constants.UserNotFoundError) {
+			errorMsg := models.ErrorMessage{Key: "user", ErrorMessage: constants.UserNotFoundError}
+			errorResponse := commonModels.ErrorAPIResponse{
+				Message: errorMsg,
+				Error:   constants.VehicleCreationFailedError,
+			}
+			ctx.IndentedJSON(http.StatusNotFound, errorResponse)
+			return
+		}
+
 		errorResponse := commonModels.ErrorAPIResponse{
 			Error: constants.VehicleCreationFailedError,
 		}
